added grid over flex

--- a/index.html
+++ b/index.html
@@ -2,9 +2,79 @@
 <html>
     <head>
         <title>Portfolio</title>
-        <link rel="stylesheet" href="./assets/style.css">
+        <link rel="stylesheet" type="text/css" href="./assets/style.css">
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
     </head>
     <body>
-
+        <header id="headBar">
+            <!--Name-->
+            <div id="pic">
+                <img src="assets/images/jgh.jpg" alt="Jaron Gordon Hadley" style="height:100%;">
+            </div>
+            <div id="name">
+                <h1>Jaron Hadley</h1>
+            </div>
+        </header>
+        <nav>
+            <a href="#aboutMe">About Me</a>
+            <a href="#work">Projects</a>
+            <a href="#contactMe">Contact Me</a>
+        </nav>
+        <div class="wrapper">
+            <div id="aboutMeHeader">
+                <p>About Me</p>
+            </div> <!--about me header-->
+            <div id="aboutMe">
+                <p>I do the thing here</p>
+            </div> <!--about me text-->
+            <div id="work">
+                <header>Work</header>
+            </div> <!--portfolio header-->
+            <div id="project1">
+                <header>Portfolio 1</header>
+                <a href="index.html">
+                    <img src="assets/images/coming_soon.png" alt="Project 1">
+                </a>
+            </div> <!--portfolio1-->
+            <div id="project2">
+                <header>Project 2</header>
+                <a href="index.html">
+                    <img src="assets/images/coming_soon.png" alt="Project 2">
+                </a>
+            </div> <!--portfolio2-->
+            <div id="project3">
+                <header>Project 3</header>
+                <a href="index.html">
+                    <img src="assets/images/coming_soon.png" alt="Project 3">
+                </a>
+            </div> <!--portfolio3-->
+            <div id="project4">
+                <header>Project 4</header>
+                <a href="index.html">
+                    <img src="assets/images/coming_soon.png" alt="Project 4">
+                </a>
+            </div> <!--portfolio4-->
+            <div id="project5">
+                <header>Project 5</header>
+                <a href="index.html">
+                    <img src="assets/images/coming_soon.png" alt="Project 5">
+                </a>
+            </div> <!--portfolio5-->
+            <div id="project6">
+                <header>Project 6</header>
+                <a href="index.html">
+                    <img src="assets/images/coming_soon.png" alt="Project 6">
+                </a>
+            </div> <!--portfolio6-->
+            <div id="project7">
+                <header>Project 7</header>
+                <a href="index.html">
+                    <img src="assets/images/coming_soon.png" alt="Project 7">
+                </a>
+            </div> <!--portfolio7-->
+            <div id="contactMeHeader">Contact Me</div> <!--contact me header-->
+            <div id="contactMe">Contact Data</div> <!--contact me-->
+        </div>
     </body>
 </html>
