added about-bday project and link

--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
                 <header>Work</header>
             </div> <!--portfolio header-->
             <div id="project1">
-                <header>Portfolio 1</header>
-                <a href="index.html">
-                    <img src="assets/images/coming_soon.png" alt="Project 1">
+                <header>About Your Birthday</header>
+                <a href="https://joncerruti.github.io/About-Your-Birthday/">
+                    <img src="assets/images/abt_bday_main.png" alt="Project 1">
                 </a>
             </div> <!--portfolio1-->
             <div id="project2">
