added new project to portfolio

--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
                 </a>
             </div> <!--portfolio1-->
             <div id="project2">
-                <header>Project 2</header>
-                <a href="index.html">
-                    <img src="assets/images/coming_soon.png" alt="Project 2">
+                <header>Blog 1.5</header>
+                <a href="https://guarded-beach-85319.herokuapp.com/">
+                    <img src="assets/images/2022-09-10 20_54_09-Blog 1.5.png" alt="Project 2">
                 </a>
             </div> <!--portfolio2-->
             <div id="project3">
