added another project

--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
                 </a>
             </div> <!--portfolio2-->
             <div id="project3">
-                <header>Project 3</header>
-                <a href="index.html">
-                    <img src="assets/images/coming_soon.png" alt="Project 3">
+                <header>Pixel Block Party</header>
+                <a href="https://pixel-block-party.herokuapp.com/">
+                    <img src="assets/images/home.png" alt="Project 3">
                 </a>
             </div> <!--portfolio3-->
             <div id="project4">
